--- a/css/task3.css
+++ b/css/task3.css
@@ -1,9 +1,10 @@
 .gallery img {
-  max-width: 1200px;
+  max-width: 500px;
 }
 
 .gallery {
   display: flex;
+  flex-direction: column;
   gap: 30px;
 
   flex-wrap: wrap;
